# stock-analyzer

./: .env.example  .gitignore  Dockerfile  Dockerfile.backend  QUICKSTART.md  README.md  app.py  docker-compose.yml  start.sh  status.sh  stop.sh
backend/: pyproject.toml  requirements.txt
backend/agents/: base_agent.py  debate_moderator.py  decision_committee.py  fundamental_agent.py  macro_agent.py  sentiment_agent.py  sentiment_nlp.py  technical_agent.py
backend/alerts/: alert_manager.py
backend/auth/: jwt_utils.py  models.py  router.py
backend/backtest/: engine.py  event_engine.py  events.py  metrics.py
backend/data/: __init__.py  akshare_provider.py  base_provider.py  history_store.py  provider_factory.py  tushare_provider.py  watchlist_store.py
backend/factors/: factor_evaluator.py  factor_library.py
backend/llm/: factory.py
backend/memory/: vector_store.py
backend/models/: lightgbm_scorer.py  lstm_predictor.py
backend/patterns/: pattern_recognizer.py  shapes.py
backend/plugins/: industry_rotation_agent.py  manager.py
backend/rag/: context_builder.py  document_loader.py
backend/risk/: position_sizer.py  var_calculator.py  volatility_cone.py
backend/src/: capital_flow.py  industry_analysis.py  llm_reporter.py  macro_data.py  main.py  portfolio_analysis.py  price_targets.py  stock_analysis.py  symbol_resolver.py  test_stock_analysis.py
backend/tests/: conftest.py  test_agents.py  test_backtest.py  test_stock_analysis.py
backend/tools/: akshare_tools.py  toolkit.py
backend/utils/: cache.py  formula_parser.py  logger.py
(+27 files in other folders)
