[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "stock-analyzer-backend"
version = "1.0.0"
description = "A股智能分析系统后端"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "agents*", "backtest*", "data*", "llm*", "memory*", "plugins*", "tools*", "utils*", "alerts*"]
